fix settings controller
